--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Lora:wght@500;600&family=Poppins:wght@400;500&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
@@ -112,13 +114,13 @@ img {
   padding-block: 5rem 1rem;
 }
 
-.section__title {
+.section-title {
   font-size: var(--h1-font-size);
   font-family: var(--title-font);
   margin-bottom: 1.5rem;
 }
 
-.section__subtitle {
+.section-subtitle {
   display: block;
   font-size: var(--h2-font-size);
   font-family: var(--subtitle-font);
@@ -126,8 +128,8 @@ img {
   margin-bottom: 0.5rem;
 }
 
-.section__title, 
-.section__subtitle {
+.section-title, 
+.section-subtitle {
   text-align: center;
 }
 
@@ -325,6 +327,34 @@ img {
 }
 
 /*=============== ABOUT ===============*/
+.about{
+  position: relative;
+}
+
+.about-container{
+  row-gap: 3rem;
+}
+
+.about-data{
+  text-align: center;
+}
+
+.about-title img{
+  width: 30px;
+}
+
+.about-title div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: .5rem;
+}
+
+.about-img{
+  width: 300px;
+  justify-self: center;
+}
+
 
 
 /*=============== POPULAR ===============*/
