styles "popular" container

--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,13 @@ img {
 
 /*=============== POPULAR ===============*/
 
+.popular-container{
+  padding-top: 4rem;
+  grid-template-columns: 250px;
+  justify-content: center;
+  row-gap: 5.5rem;
+}
+
 
 /*=============== RECENTLY ===============*/
 
