--- a/css/style.css
+++ b/css/style.css
@@ -513,6 +513,104 @@ img {
 
 
 /*=============== FOOTER ===============*/
+.footer{
+  position: relative;
+  padding-block: 3rem 2rem;
+  overflow: hidden;
+}
+
+.footer-container{
+  row-gap: 3rem;
+}
+
+.footer-logo{
+  align-items: center;
+  column-gap: .5rem;
+  font-family: var(--title-font);
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
+  transition: color .3s;
+}
+
+.footer-logo img{
+  width: 180px;
+}
+
+.footer-description, 
+.footer-link,
+.footer-information{
+  font-size: var(--small-font-size);
+}
+
+.footer-content,
+.footer-links{
+  display: grid;
+}
+
+.footer-content{
+  grid-template-columns: repeat(2, max-content);
+  gap: 2.5rem;
+}
+
+.footer-title{
+  font-size: var(--h3-font-size);
+  margin-bottom: 1.5rem;
+}
+
+.footer-links{
+  row-gap: .5rem;
+}
+
+.footer-link{
+  color: var(--text-color);
+  transition: color .3s;
+}
+
+.footer-link:hover{
+  color: var(--first-color);
+}
+
+.footer-social{
+  display: flex;
+  column-gap: 1.25rem;
+}
+
+.footer-social-link{
+  color: var(--first-color);
+  font-size: 1.25rem;
+  transition: color .3s, transform .3s;
+}
+
+.footer-social-link:hover{
+  color: var(--first-color-alt);
+  transform: translateY(-2px);
+}
+
+.footer-info,
+.footer-card{
+  display: flex;
+}
+
+.footer-info{
+  margin-top: 3.5rem;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+
+.footer-card{
+  column-gap: 1rem;
+  justify-content: center;
+}
+
+.footer-card img{
+  width: 35px;
+}
+
+.footer-copy{
+  text-align: center;
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+}
 
 
 /*=============== SCROLL BAR ===============*/
