--- a/css/style.css
+++ b/css/style.css
@@ -614,6 +614,20 @@ img {
 
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  
+}
+
+::-webkit-scrollbar-thumb{
+  border-radius: .5rem;
+  background-color: var(--first-color);
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: var(--first-color-alt);
+}
 
 
 /*=============== SCROLL UP ===============*/
