--- a/css/style.css
+++ b/css/style.css
@@ -614,7 +614,7 @@ img {
 
 
 /*=============== SCROLL BAR ===============*/
-::-webkit-scrollbar{
+::-webkit-scrollbar{ 
   width: .6rem;
   border-radius: .5rem;
   
@@ -631,9 +631,30 @@ img {
 
 
 /*=============== SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--container-color);
+  box-shadow: 0 4px 12px hsla(19, 64%, 24%, .1);
+  display: inline-flex;
+  padding: .35rem;
+  border-radius: .25rem;
+  font-size: 1.1rem;
+  color: var(--first-color);
+  z-index: var(--zz-tooltip);
+  transition: bottom .3s, transform .3s, background .4s;
+}
+
+.scrollup:hover{
+  transform: translateY(-.25rem);
+}
 
 
 /* Show Scroll Up*/
+.show-scroll{
+  bottom: 3rem;
+}
 
 
 /*=============== BREAKPOINTS ===============*/
