--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
+
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
@@ -477,9 +478,9 @@ img {
 .newsletter-img{
   width: 250px;
   justify-self: center;
- /* position: absolute;
+ position: absolute;
   top: -4.5rem;
-  left: -8rem;*/
+  left: -8rem;
 }
 
 .newsletter-data .section-subtitle{
