changed popular card background color

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
   --text-color: hsl(19, 16%, 35%);
   --text-color-light: hsl(19, 8%, 55%);
   --body-color: #f5f5f5;
-  --container-color: #fcf6f7;
+  --container-color: #f5f5f5;
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
